--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -8,3 +8,4 @@ chrono = { version = "0.4", default-features = false, features = ["clock"] }
 eframe = "0.30"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sha2 = "0.10"
